added media query for calendar page, and started index

--- a/css/styles.css
+++ b/css/styles.css
@@ -51,9 +51,31 @@ a {
     font-size: 1.5rem;
 }
 
+
 /* LANDING PAGE */
+.landing-cont{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100vw;
+    height: 100vh;
+    background: linear-gradient(225deg, #067A53, #3FC284);
+    padding: 20px;
+    overflow: hidden;
+    position: relative;
+}
+
+.dorito{
+    width: 1600px;
+    height: 1300px;
+    bottom: -400px;
+    right: -200px;
+    position: absolute;
+}
+
 
 /* LOGIN & SIGN UP PAGE */
+
 
 /* CALENDAR PAGE */
 .calendar-cont{
@@ -135,8 +157,22 @@ a {
     height: 40rem;
 }
 
+@media screen and (max-width:800px){
+    .calendar-row{
+        display: flex;
+        flex-direction: column;
+        width: 75rem;
+        height: 35rem;
+        justify-content: space-between;
+        align-items: center;
+    }
+}
+
+
 /* FORECAST PAGE */
 
+
 /* COST SPLITTER PAGE */
+
 
 /* EVENT CREATION PAGE */
