--- a/css/styles.css
+++ b/css/styles.css
@@ -73,6 +73,79 @@ a {
     position: absolute;
 }
 
+.landing-top-bar{
+    display: flex;
+    justify-content: flex-end;
+    align-self: flex-start;
+    width: 100%;
+}
+
+.landing-mid-section{
+    display: flex;
+    width: 100%;
+    justify-content: space-evenly;
+    min-height: 80%;
+}
+
+.landing-col{
+    display: flex;
+    flex-direction: column;
+    flex-basis: 50%;
+}
+
+.landing-heading{
+    font-family: Ubuntu, sans-serif;
+    font-weight: 700;
+    font-size: 5rem;
+    color: #FFF; 
+    margin-bottom: 0;
+}
+
+.landing-description{
+    font-family: Ubuntu, sans-serif;
+    font-size: 2rem;
+    font-weight: 400;
+    color: #FFF;
+}
+
+@media screen and (max-width:800px){
+    .dorito{
+        z-index: -1;
+    }
+
+    .landing-cont{
+        z-index: 1;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 100vw;
+        background: linear-gradient(225deg, #067A53, #3FC284);
+        padding: 20px;
+        position: relative;
+    }
+
+    .landing-heading{
+        font-family: Ubuntu, sans-serif;
+        font-weight: 700;
+        font-size: 3rem;
+        color: #FFF; 
+        margin-bottom: 0;
+    }
+    
+    .landing-description{
+        font-family: Ubuntu, sans-serif;
+        font-size: 1rem;
+        font-weight: 400;
+        color: #FFF;
+    }
+
+    .landing-mid-section{
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+    }
+}
+
 
 /* LOGIN & SIGN UP PAGE */
 
