--- a/css/styles.css
+++ b/css/styles.css
@@ -36,6 +36,13 @@ a {
     font-size: 2rem;
 }
 
+.orange-button:hover{
+    background-color: #fff;
+    color: #000;
+    transition: 0.7s;
+
+}
+
 .black-button{
     display: flex;
     justify-content: center;
@@ -49,6 +56,12 @@ a {
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.35));
     font-family: 'Roboto', sans-serif;
     font-size: 1.5rem;
+}
+
+.black-button:hover{
+    background-color: #fff;
+    color: #000;  
+    transition: 0.7s;
 }
 
 
