--- a/css/styles.css
+++ b/css/styles.css
@@ -37,8 +37,7 @@ a {
 }
 
 .orange-button:hover{
-    background-color: #fff;
-    color: #000;
+    background-color: #FFAF65;
     transition: 0.7s;
 
 }
@@ -59,9 +58,20 @@ a {
 }
 
 .black-button:hover{
-    background-color: #fff;
-    color: #000;  
+    background-color: #657E78;  
     transition: 0.7s;
+}
+
+@media screen and (max-width:800px){
+    .orange-button{
+        width: 8rem;
+        font-size: 1.5rem;
+    }
+
+    .black-button{
+        width: 7rem;
+        font-size: 1rem;
+    }
 }
 
 
@@ -161,6 +171,103 @@ a {
 
 
 /* LOGIN & SIGN UP PAGE */
+.back-button{
+    width: 2rem;
+    height: 2rem;
+}
+
+.login-cont{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100vw;
+    height: 100vh;
+    background: linear-gradient(225deg, #067A53, #3FC284);
+    padding: 20px;
+    overflow: hidden;
+    position: relative;
+}
+
+.login-box{
+    font-family: 'Roboto', sans-serif;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    background-color: #141414;
+    color: #fff;
+    height: 95%;
+    width: 40%;
+    border-radius: 32px;
+    z-index: 1;
+}
+
+.login-header-cont{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    justify-content: flex-start;
+    padding-left: 25px;
+}
+
+
+.social-media-cont{
+    display: flex;
+    width: 14rem;
+    height: 3rem;
+    justify-content: space-between;
+}
+
+.social-media-icon{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 3rem;
+    height: 3rem;
+    background-color: #141414;
+}
+
+.white-line-break{
+    display: flex;
+    width: 32rem;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.login-white-line{
+    display: flex;
+    height: 5px;
+    width: 13rem;
+    background-color: #FFFFFF;
+    justify-content: row;
+}
+
+.login-form{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    height: 8rem;
+    width: 70%;
+    border: none;
+}
+
+.login-text-input{
+    width: 100%;
+    height: 2.5rem;
+    padding: 1rem;
+    font-family: 'Ubuntu', sans-serif;
+}
+
+@media screen and (max-width:800px){
+    .white-line-break{
+        width: 10rem;
+    }
+
+    .login-white-line{
+        width: 3rem;
+    }
+}
+
 
 
 /* CALENDAR PAGE */
