--- a/css/styles.css
+++ b/css/styles.css
@@ -258,6 +258,20 @@ a {
     font-family: 'Ubuntu', sans-serif;
 }
 
+/* signup page */
+.signup-cont{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100vw;
+    height: 100vh;
+    background: linear-gradient(225deg, #067A53, #3FC284);
+    padding: 20px;
+    overflow: hidden;
+    position: relative;
+    z-index: -2;
+}
+
 @media screen and (max-width:800px){
     .white-line-break{
         width: 10rem;
