--- a/css/styles.css
+++ b/css/styles.css
@@ -527,7 +527,41 @@ form {
     justify-content: center;
     align-items: center;
     width: 70%;
-    border: 1px solid red;
+    max-width: 700px;
+    height: 80%;
+    border: 3px solid #3FC284;
+    border-radius: 32px;
+    padding: 20px;
+    justify-content: space-between;
+}
+
+h2 {
+    font-family: 'Ubuntu', sans-serif;
+    font-weight: 500;
+    font-size: 36pt;
+    align-self: flex-start;
+}
+
+section {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    font-size: 24pt;
+    font-family: 'Ubuntu', sans-serif;
+}
+
+#people, #totalcost, #indcost {
+    font-size: 18pt;
+    text-align: center;
+}
+
+#calcbutton {
+    font-family: 'Ubuntu', sans-serif;
+    font-size: 24pt;
+    padding: 15px;
+    background-color: green;
+    color: white;
+    border-radius: 16px;
 }
 
 
