--- a/css/styles.css
+++ b/css/styles.css
@@ -515,7 +515,7 @@ nav{
 main {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     width: 100vw;
     height: 100vh;
@@ -533,6 +533,8 @@ form {
     border-radius: 32px;
     padding: 20px;
     justify-content: space-between;
+    position: relative;
+    top: -1.5rem;
 }
 
 h2 {
